// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for atom - Label render Label with specify eventProps (disable delete button) 1`] = `
<div>
  <div
    class="css-1e07x57"
  >
     
  </div>
</div>
`;

exports[`test for atom - Label render Label with specify eventProps (enable delete button) 1`] = `
<div>
  <div
    class="css-1e07x57"
  >
     
    <button
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-15wd22y-MuiSvgIcon-root"
        data-testid="HighlightOffIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`test for atom - Label render Label with specify textProps 1`] = `
<div>
  <div
    class="css-1e07x57"
  >
    this is a test value
     
  </div>
</div>
`;

exports[`test for atom - Label render Label without props must be same 1`] = `
<div>
  <div
    class="css-1e07x57"
  >
     
  </div>
</div>
`;
